--- a/style.css
+++ b/style.css
@@ -15,12 +15,17 @@
   box-sizing: border-box;
 }
 :root {
+  --color-1: rgba(50, 231, 255, 0.8);
+  --color-2: rgba(50, 231, 255, 0.2);
+  --color-3: rgba(255, 255, 255, 0.2);
+  --font-primary: "Monoton", sans-serif;
+  --font-secondary: "Bellota Text", sans-serif;
 }
 html {
   font-size: 62.5%;
 }
 body {
-  font-family: "Bellota Text", sans-serif;
+  font-family: var(--font-secondary);
   font-weight: 400;
 }
 a,
@@ -49,15 +54,35 @@ fieldset {
   position: relative;
 }
 .navbar {
+  /* position relative for the z-index to work */
+  position: relative;
+  z-index: 20;
+  top: 3rem;
+  display: flex;
+  justify-content: space-evenly;
 }
 .navbar__link {
+  font-size: 2.2rem;
+  font-weight: 700;
+  letter-spacing: 0.2rem;
+  color: #fff;
+  width: 1.5rem;
+  height: auto;
+  word-wrap: break-word;
+  transition: all 0.5s;
+}
+.navbar__link:hover {
+  width: 15rem;
+  text-align: center;
+  background-color: var(--color-3);
+  transition: all 2.5s;
 }
 .floating-bg {
   width: 140vw;
   height: 140vw;
-  background-color: rgba(50, 231, 255, 0.8);
+  background-color: var(--color-1);
   position: absolute;
-  top: -80rem;
+  top: -70rem;
   left: 50%;
   border-radius: 45%;
   animation: rotate 30s infinite;
@@ -66,7 +91,7 @@ fieldset {
   content: "";
   width: 100%;
   height: 100%;
-  background-color: rgba(50, 231, 255, 0.2);
+  background-color: var(--color-2);
   position: absolute;
   top: 0;
   left: 0;
@@ -83,8 +108,29 @@ fieldset {
   }
 }
 .section__1--heading {
+  font-size: 8rem;
+  font-family: var(--font-primary);
+  font-weight: 400;
+  position: absolute;
+  top: 18vw;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  text-shadow: 0.3rem 0.3rem 0.3rem #888;
+  color: #fff;
+  background-color: #fff;
+  padding: 0.8rem 1.6rem;
+  border-radius: 0.8rem;
+  opacity: 0.9;
 }
 .logo {
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .logo i {
+  font-size: 8rem;
+  color: var(--color-1);
+  text-shadow: 0.1rem 0.1rem 0.2rem #ddd, -0.1rem -0.1rem 0.2rem #ddd;
 }
