--- a/style.css
+++ b/style.css
@@ -20,6 +20,9 @@
   --color-3: rgba(255, 255, 255, 0.2);
   --font-primary: "Monoton", sans-serif;
   --font-secondary: "Bellota Text", sans-serif;
+  --section-heading-color: #999;
+  --card-background-color: #eee;
+  --quote-star-color: #f08e0f;
 }
 html {
   font-size: 62.5%;
@@ -44,7 +47,13 @@ fieldset {
   background: none;
   outline: none;
 }
-/* ------------------------- */
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+/* -----------Section 1-------------- */
 .container {
   overflow: hidden;
 }
@@ -133,4 +142,76 @@ fieldset {
   font-size: 8rem;
   color: var(--color-1);
   text-shadow: 0.1rem 0.1rem 0.2rem #ddd, -0.1rem -0.1rem 0.2rem #ddd;
+}
+
+/* -----------Section 2-------------- */
+.section__2 {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.section__heading {
+  font-size: 10rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--section-heading-color);
+  opacity: 0.2;
+}
+.customers__container {
+  height: 70%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.customer {
+  width: 35rem;
+  height: 50rem;
+  background-color: var(--card-background-color);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  border-radius: 0.5rem;
+  padding: 2rem;
+  box-shadow: 1rem 1rem 2rem #ddd, -1rem -1rem 2rem #ddd;
+  transition: box-shadow 0.5s;
+}
+.customer:hover {
+  box-shadow: 2rem 2rem 3rem #ddd, -2rem -2rem 3rem #ddd;
+}
+.customer:first-child {
+  align-self: flex-end;
+}
+.customer:last-child {
+  align-self: flex-start;
+}
+.customer > i {
+  font-size: 4rem;
+  color: var(--quote-star-color);
+}
+.customer__text {
+  font-size: 1.8rem;
+  text-align: justify;
+}
+.customer__text::first-letter {
+  margin-left: 1rem;
+}
+.customer__rating {
+}
+.customer__rating i {
+  font-size: 2rem;
+  color: var(--quote-star-color);
+}
+.customer img {
+  width: 10rem;
+  height: 10rem;
+  border-radius: 50%;
+}
+.customer__name {
+  font-size: 2rem;
+  font-weight: 700;
 }
