--- a/style.css
+++ b/style.css
@@ -532,6 +532,12 @@ img {
   .section__1 {
     height: 140vh;
   }
+  .floating-bg {
+    top: -30rem;
+  }
+  .section__1--heading {
+    top: 25vw;
+  }
 }
 @media (max-width: 750px) {
   html {
