--- a/style.css
+++ b/style.css
@@ -528,17 +528,7 @@ img {
     height: 50%;
   }
 }
-@media (max-width: 950px) and (orientation: landscape) {
-  .section__1 {
-    height: 140vh;
-  }
-  .floating-bg {
-    top: -35rem;
-  }
-  .section__1--heading {
-    top: 15vw;
-  }
-}
+
 @media (max-width: 750px) {
   html {
     font-size: 50%;
@@ -593,3 +583,14 @@ img {
     right: 2rem;
   }
 }
+/* @media (min-width: 150px) and (orientation: landscape) {
+  .section__1 {
+    height: 140vh;
+  }
+  .floating-bg {
+    top: -35rem;
+  }
+  .section__1--heading {
+    top: 15vw;
+  }
+} */
